--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-cookie": "^7.0.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
   },
