--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-cookie": "^7.0.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-pro-sidebar": "^1.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
