--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@heroicons/react": "^2.1.3",
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@nextui-org/react": "^2.2.10",
     "axios": "^1.1.0",
+    "framer-motion": "^11.0.20",
     "next": "14.0.4",
     "react": "^18",
     "react-cookie": "^7.0.1",
