--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-cookie": "^7.0.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^4.12.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.22.3",
